--- a/ts/package.json
+++ b/ts/package.json
@@ -1,9 +1,19 @@
 {
-    "name": "@modules/portfolio-ts",
-    "version": "0.0.1",
-    "type": "module",
-    "main": "./src/index.ts",
-    "dependencies": {
-        "rxjs": "^7.8.1"
-    }
+  "name": "@modules/portfolio-ts",
+  "version": "0.0.1",
+  "type": "module",
+  "main": "./src/index.ts",
+  "scripts": {
+    "build": "tsc --noEmit",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "rxjs": "^7.8.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "eslint": "^9.0.0",
+    "@eslint/js": "^9.0.0",
+    "typescript-eslint": "^8.0.0"
+  }
 }
