--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,9 @@ jobs:
           pip install pre-commit pytm semgrep
 
       - name: Run DevSecOps Gates (Pre-commit)
-        run: pre-commit run --all-files --show-diff-on-failure
+        run: |
+          git config --global --add safe.directory ${{ github.workspace }}
+          pre-commit run --all-files --show-diff-on-failure
         env:
            # Ensure pre-commit can find locally installed tools
            PATH: ${{ github.workspace }}/node_modules/.bin:$PATH
