feat: integrate DevSecOps, pre-commit and moonrepo with cloned virtual module portfolio

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Run DevSecOps Gates (Pre-commit)
         run: |
+          sudo apt-get update && sudo apt-get install -y git
           git config --global --add safe.directory ${{ github.workspace }}
           pre-commit run --all-files --show-diff-on-failure
         env:
