--- a/svelte/package.json
+++ b/svelte/package.json
@@ -6,14 +6,18 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest run"
   },
   "devDependencies": {
-    "svelte": "^5.0.0",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
-    "vite": "^7.0.0",
+    "@testing-library/svelte": "^5.3.1",
+    "jsdom": "^25.0.0",
+    "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^7.0.0",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@modules/portfolio-ts": "workspace:*"
