--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -1,10 +1,20 @@
 {
-  "extends": "../tsconfig.base.json",
-  "include": ["src/**/*"],
+  "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "strict": true,
-    "types": ["svelte", "vite/client"]
-  }
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src/**/*"]
 }
