--- a/moon.yml
+++ b/moon.yml
@@ -30,10 +30,18 @@ tasks:
     deps: ["ts-build"] # Depends on shared lib
     platform: "node"
 
+  svelte-sync:
+    command: "npx svelte-kit sync"
+    inputs: ["svelte/**/*.svelte", "svelte/**/*.ts", "svelte/**/*.js"]
+    platform: "node"
+    local: true # Only needed for types gen, mostly local
+
   svelte-check:
     command: "pnpm --dir svelte check"
     inputs: ["svelte/**/*", "ts/**/*"]
+    deps: ["svelte-sync"]
     platform: "node"
+
 
   svelte-test:
     command: "pnpm --dir svelte run test"
