fix: missing moon.yaml update

--- a/svelte/moon.yml
+++ b/svelte/moon.yml
@@ -1,2 +1,16 @@
 $schema: 'https://moonrepo.dev/schemas/project.json'
 id: 'portfolio-svelte'
+
+tasks:
+  build:
+    command: 'svelte-package'
+    outputs:
+      - 'dist/**'
+  lint:
+    command: 'echo "No lint script available"'
+    options:
+      mergeArgs: 'replace'
+  test:
+    command: 'echo "No test script available"'
+    options:
+      mergeArgs: 'replace'
