--- a/svelte/package.json
+++ b/svelte/package.json
@@ -35,6 +35,7 @@
     "vitest": "^4.0.16"
   },
   "dependencies": {
+    "virtual-module-core": "github:reidlai/virtual-module-core",
     "@modules/portfolio-ts": "workspace:*"
   }
 }
