--- a/svelte/package.json
+++ b/svelte/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "sync": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "pnpm run check"
   },
   "exports": {
     ".": {
