--- a/svelte/package.json
+++ b/svelte/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
+    "story:dev": "HOST=0.0.0.0 storybook dev -p 6007 --no-open",
     "build": "svelte-package",
     "preview": "vite preview",
     "sync": "svelte-kit sync",
@@ -23,20 +24,31 @@
     "svelte": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/blocks": "^8.6.15",
+    "@storybook/svelte": "^8.6.15",
+    "@storybook/sveltekit": "^8.6.15",
     "@sveltejs/adapter-auto": "^7.0.0",
     "@sveltejs/kit": "^2.49.2",
     "@sveltejs/package": "^2.5.7",
-    "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@testing-library/svelte": "^5.3.1",
+    "autoprefixer": "^10.4.18",
     "jsdom": "^25.0.0",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.6.15",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0",
-    "vite": "^7.0.0",
+    "vite": "^6.4.1",
     "vitest": "^4.0.16"
   },
   "dependencies": {
+    "@modules/portfolio-ts": "workspace:*",
     "virtual-module-core": "github:reidlai/virtual-module-core",
-    "@modules/portfolio-ts": "workspace:*"
+    "zod": "^4.3.5"
   }
 }
