--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prettier": "^3.7.4"
   },
   "engines": {
-    "node": ">=20.19.5"
+    "node": "20.18.0"
   },
   "pnpm": {
     "overrides": {
