--- a/moon.yml
+++ b/moon.yml
@@ -3,8 +3,8 @@ language: "unknown" # Mixed/Polyglot
 
 fileGroups:
   go: ["go/**/*"]
-  svelte: ["sveltekit/**/*"]
-  ts: ["ts/**/*"]
+  sveltekit: ["sveltekit/**/*", "!sveltekit/node_modules/**"]
+  ts: ["ts/**/*", "!ts/node_modules/**"]
 
 tasks:
   # Go Backend
@@ -15,18 +15,21 @@ tasks:
 
   go-test:
     command: "go test -v ./go/..."
-    inputs: ["go/**/*"]
+    inputs: ["go/**/*", "!go/goa_gen/**"]
     platform: "system"
 
   go-lint:
-    command: "go run github.com/golangci/golangci-lint/cmd/golangci-lint@latest run -v ./go/..."
-    inputs: ["go/**/*"]
+    deps: ["portfolio-go:lint"]
     platform: "system"
+    options:
+      mergeInputs: "replace"
 
   go-format:
     command: "goimports -w ./go"
     inputs: ["go/**/*"]
-    platform: "system"
+    options:
+      mergeArgs: "replace"
+      mergeInputs: "replace"
 
   go-run:
     command: "cd go && go run ."
@@ -41,82 +44,70 @@ tasks:
 
   # Svelte Frontend
   svelte-dev:
-    command: "pnpm --dir sveltekit dev"
+    deps: ["portfolio-sveltekit:dev"]
     local: true
     platform: "node"
 
   svelte-build:
-    command: "pnpm --dir sveltekit build"
-    inputs: ["sveltekit/**/*", "ts/**/*"]
-    deps: ["ts-build"] # Depends on shared lib
+    deps: ["portfolio-sveltekit:build"]
     platform: "node"
 
   svelte-sync:
-    command: "pnpm --dir sveltekit run sync"
-
-    inputs: ["sveltekit/**/*.svelte", "sveltekit/**/*.ts", "sveltekit/**/*.js"]
+    deps: ["portfolio-sveltekit:sync"]
     platform: "node"
     local: true
     options:
-      runInCI: true # Required because 'local: true' defaults this to false
-      persistent: false # It's a one-off command, not a server
-
-
+      runInCI: true
+      persistent: false
 
   svelte-check:
-    command: "pnpm --dir sveltekit check"
-    inputs: ["sveltekit/**/*", "ts/**/*"]
-    deps: ["svelte-sync"]
+    deps: ["portfolio-sveltekit:check"]
     platform: "node"
 
 
   svelte-test:
-    command: "pnpm --dir sveltekit run test"
-    env:
-      CI: "true"
-    inputs: ["sveltekit/**/*", "ts/**/*"]
-    deps: ["ts-build"]
+    deps: ["portfolio-sveltekit:test"]
     platform: "node"
 
   svelte-lint:
-    command: "pnpm --dir sveltekit lint"
-    inputs: ["sveltekit/**/*"]
-    deps: ["svelte-sync"]
-    platform: "node"
+    deps: ["portfolio-sveltekit:lint"]
+    platform: "system"
+    options:
+      mergeInputs: 'replace'
 
   svelte-format:
-    command: "pnpm --dir sveltekit run format"
-    inputs: ["sveltekit/**/*"]
-    platform: "node"
+    deps: ["portfolio-sveltekit:format"]
+    platform: "system"
+    inputs: ["moon.yml"]
+    options:
+      mergeInputs: 'replace'
 
   svelte-storybook:
-    command: "pnpm --dir sveltekit run story:dev"
-    inputs: ["sveltekit/**/*"]
+    deps: ["portfolio-sveltekit:storybook"]
     platform: "node"
     local: true
 
   # TypeScript Shared Lib
   ts-build:
-    command: "pnpm --dir ts build"
-    inputs: ["ts/**/*"]
+    deps: ["portfolio-ts:build"]
     platform: "node"
 
   ts-lint:
-    command: "pnpm --dir ts lint"
-    inputs: ["ts/**/*"]
-    platform: "node"
+    deps: ["portfolio-ts:lint"]
+    platform: "system"
+    options:
+      mergeInputs: 'replace'
 
   ts-test:
-    command: "pnpm --dir ts run test"
-    env:
-      CI: "true"
-    inputs: ["ts/**/*"]
+    deps: ["portfolio-ts:test"]
     platform: "node"
 
   ts-format:
-    command: "pnpm --dir ts run format"
-    inputs: ["ts/**/*"]
-    platform: "node"
+    deps: ["portfolio-ts:format"]
+    platform: "system"
+    inputs: ["moon.yml"]
+    options:
+      mergeInputs: 'replace'
 
   # Composite Tasks
   build:
@@ -124,6 +115,8 @@ tasks:
     deps: ["go-build", "svelte-build", "ts-build"]
     outputs: []
     platform: "system"
+    options:
+      mergeOutputs: 'replace'
 
   test:
     command: 'echo "Testing all components"'
@@ -135,8 +128,14 @@ tasks:
     command: 'echo "Linting all components"'
     deps: ["go-lint", "ts-lint", "svelte-lint"]
     platform: "system"
+    inputs: ["moon.yml"]
+    options:
+      mergeInputs: 'replace'
 
   format:
     command: 'echo "Formatting all components"'
     deps: ["go-format", "ts-format", "svelte-format"]
     platform: "system"
+    inputs: ["moon.yml"]
+    options:
+      mergeInputs: 'replace'
