--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -34,6 +34,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@testing-library/svelte": "^5.3.1",
     "@types/lodash": "^4.17.23",
+    "@tailwindcss/vite": "^4.1.18",
     "autoprefixer": "^10.4.18",
     "jsdom": "^25.0.0",
     "postcss": "^8.4.35",
@@ -42,7 +43,7 @@
     "storybook": "^8.6.15",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.0.0",
     "vite": "^6.4.1",
     "vitest": "^4.0.16"
