fix: moon project tasks

--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -3,6 +3,7 @@ projects:
   portfolio: "."
   portfolio-sveltekit: "sveltekit"
   portfolio-ts: "ts"
+  portfolio-go: "go"
 
 vcs:
   manager: "git"
