--- a/ts/moon.yml
+++ b/ts/moon.yml
@@ -7,6 +7,7 @@ tasks:
   build:
     outputs: []
     options:
+      mergeArgs: "replace"
       mergeOutputs: "replace"
 
   lint:
@@ -18,10 +19,16 @@ tasks:
 
   test:
     command: "vitest run"
+    platform: node
+    options:
+      mergeArgs: "replace"
 
   format:
     command: "prettier --write ."
     inputs: ["**/*", "!node_modules/**"]
+    platform: node
+    options:
+      mergeArgs: "replace"
 
   zodios-gen:
     command: 'npx openapi-zod-client "../go/goa_gen/gen/http/openapi3.json" -o "./src/lib/api-client.ts"'
