--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -2,6 +2,7 @@
   "name": "@modules/portfolio",
   "version": "0.0.1",
   "type": "module",
+  "description": "Portfolio Virtual Module SvelteKit stack for app shell",
   "scripts": {
     "dev": "vite dev",
     "story:dev": "HOST=0.0.0.0 storybook dev -p 6007 --no-open",
@@ -14,9 +15,9 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "svelte": "./dist/index.js",
-      "default": "./dist/index.js"
+      "types": "./src/index.ts",
+      "svelte": "./src/index.ts",
+      "default": "./src/index.ts"
     }
   },
   "peerDependencies": {
@@ -24,35 +25,43 @@
     "svelte": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.15",
-    "@storybook/blocks": "^8.6.15",
-    "@storybook/svelte": "^8.6.15",
-    "@storybook/sveltekit": "^8.6.15",
-    "@sveltejs/adapter-auto": "^7.0.0",
-    "@sveltejs/kit": "^2.49.2",
-    "@sveltejs/package": "^2.5.7",
-    "@sveltejs/vite-plugin-svelte": "^5.1.1",
-    "@testing-library/svelte": "^5.3.1",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/blocks": "8.6.14",
+    "@storybook/preview-api": "8.6.14",
+    "@storybook/svelte": "8.6.14",
+    "@storybook/sveltekit": "8.6.14",
+    "@sveltejs/adapter-auto": "7.0.0",
+    "@sveltejs/kit": "2.16.1",
+    "@sveltejs/package": "2.5.7",
+    "@sveltejs/vite-plugin-svelte": "5.1.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/svelte": "5.3.1",
     "@types/lodash": "^4.17.23",
-    "@tailwindcss/vite": "^4.1.18",
-    "autoprefixer": "^10.4.18",
-    "jsdom": "^25.0.0",
-    "postcss": "^8.4.35",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "storybook": "^8.6.15",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.0.0",
-    "vite": "^6.4.1",
-    "vitest": "^4.0.16"
+    "@tailwindcss/vite": "4.1.18",
+    "autoprefixer": "10.4.23",
+    "jsdom": "27.4.0",
+    "postcss": "8.5.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "storybook": "8.6.14",
+    "svelte": "5.47.1",
+    "svelte-check": "4.1.0",
+    "tailwindcss": "4.1.18",
+    "typescript": "5.4.5",
+    "vite": "6.2.1",
+    "vitest": "4.0.16"
   },
   "dependencies": {
     "@modules/portfolio-ts": "workspace:*",
+    "bits-ui": "^1.8.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "lucide-svelte": "^0.562.0",
+    "rxjs": "^7.8.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
     "virtual-module-core": "github:reidlai/virtual-module-core",
-    "zod": "^3.24.1",
-    "rxjs": "^7.8.1"
+    "zod": "^3.24.1"
   }
 }
