--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "sync": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "test": "vitest run",
+    "test": "node scripts/vitest-wrapper.js",
     "lint": "pnpm run check"
   },
   "exports": {
@@ -34,10 +34,10 @@
     "@sveltejs/kit": "2.16.1",
     "@sveltejs/package": "2.5.7",
     "@sveltejs/vite-plugin-svelte": "5.1.1",
+    "@tailwindcss/vite": "4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "5.3.1",
     "@types/lodash": "^4.17.23",
-    "@tailwindcss/vite": "4.1.18",
     "autoprefixer": "10.4.23",
     "jsdom": "27.4.0",
     "postcss": "8.5.6",
