--- a/sveltekit/package.json
+++ b/sveltekit/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "sync": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "test": "node scripts/vitest-wrapper.js",
+    "test": "vitest run",
     "lint": "pnpm run check"
   },
   "exports": {
@@ -25,31 +25,31 @@
     "svelte": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/preview-api": "8.6.14",
-    "@storybook/svelte": "8.6.14",
-    "@storybook/sveltekit": "8.6.14",
-    "@sveltejs/adapter-auto": "7.0.0",
-    "@sveltejs/kit": "2.16.1",
-    "@sveltejs/package": "2.5.7",
-    "@sveltejs/vite-plugin-svelte": "5.1.1",
-    "@tailwindcss/vite": "4.1.18",
+    "@storybook/addon-essentials": "8.6.15",
+    "@storybook/blocks": "8.6.15",
+    "@storybook/preview-api": "8.6.15",
+    "@storybook/svelte": "8.6.15",
+    "@storybook/sveltekit": "8.6.15",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/kit": "^2.49.2",
+    "@sveltejs/package": "^2.5.7",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/svelte": "5.3.1",
+    "@testing-library/svelte": "^5.3.1",
     "@types/lodash": "^4.17.23",
-    "autoprefixer": "10.4.23",
-    "jsdom": "27.4.0",
-    "postcss": "8.5.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "storybook": "8.6.14",
-    "svelte": "5.47.1",
-    "svelte-check": "4.1.0",
-    "tailwindcss": "4.1.18",
-    "typescript": "5.4.5",
-    "vite": "6.2.1",
-    "vitest": "4.0.16"
+    "autoprefixer": "^10.4.18",
+    "jsdom": "^25.0.0",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "8.6.15",
+    "svelte": "5.46.1",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.0.0",
+    "vite": "^6.4.1",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@modules/portfolio-ts": "workspace:*",
